--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.9.1'
 //    implementation 'org.slf4j:slf4j-simple:2.0.0-alpha1'
     implementation  group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
+    implementation group: 'io.appium', name: 'java-client', version: '7.5.1'
+
 
 
 }
